src/objects/RMA_Request_Line__c/RMA_Request_Line__c.object-meta.xml
<CustomObject>
    <label>RMA Request Line</label>
    <nameField>
        <label>Customer Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>