src/objects/RMA_Request_Line__c/fields/Brief_description_of_the_failure__c.field-meta.xml
<CustomField>
    <fullName>Brief_description_of_the_failure__c</fullName>
    <label>Brief description of the failure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>