src/objects/RMA_Request_Line__c/fields/BUCode__c.field-meta.xml
<CustomField>
    <fullName>BUCode__c</fullName>
    <label>BU Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>