src/objects/RMA_Request_Line__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>