src/objects/RMA_Request_Line__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <inlineHelpText>This is the Customer P/N</inlineHelpText>
    <label>Customer Part Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>