src/objects/RMA_Request_Line__c/fields/Customer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Serial_Number__c</fullName>
    <label>Customer Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>