src/objects/RMA_Request_Line__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <label>End Customer</label>
    <length>240</length>
    <type>Text</type>
</CustomField>