src/objects/RMA_Request_Line__c/fields/Finisar_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Finisar_Part_Number__c</fullName>
    <inlineHelpText>This is the Finisar Part Number</inlineHelpText>
    <label>Finisar Part Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>