src/objects/RMA_Request_Line__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Line Number</label>
    <type>AutoNumber</type>
</CustomField>