src/objects/RMA_Request_Line__c/fields/Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Org_Code__c</fullName>
    <inlineHelpText>The Org Code</inlineHelpText>
    <label>Org Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>