src/objects/RMA_Request_Line__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <label>Org ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>