src/objects/RMA_Request_Line__c/fields/Original_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_PO_Amount__c</fullName>
    <inlineHelpText>This is the amount of the part originally</inlineHelpText>
    <label>Original PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>