src/objects/RMA_Request_Line__c/fields/PO_Price__c.field-meta.xml
<CustomField>
    <fullName>PO_Price__c</fullName>
    <label>PO Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original PO</fullName>
                <default>true</default>
                <label>Original PO</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>