src/objects/RMA_Request_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RMA Request Lines</relationshipLabel>
    <relationshipName>RMA_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>