src/objects/RMA_Request_Line__c/fields/Product_BU__c.field-meta.xml
<CustomField>
    <fullName>Product_BU__c</fullName>
    <formula>TEXT(Product__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product BU</label>
    <type>Text</type>
</CustomField>