src/objects/RMA_Request_Line__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <inlineHelpText>Why is the part being returned</inlineHelpText>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Failure</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Rework/Re-test</fullName>
            </value>
            <value>
                <fullName>Customer Accommodation</fullName>
            </value>
            <value>
                <fullName>Sample/Demo Return</fullName>
            </value>
            <value>
                <fullName>Product Failure</fullName>
            </value>
            <value>
                <fullName>&quot;Equipment failure,  Service outage. Verified by Telesur Network operations together with Ciena support&quot;</fullName>
                <isActive>false</isActive>
                <label>&quot;Equipment failure,  Service outage. Verified by Telesur Network operations together with Ciena support&quot;</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <isActive>false</isActive>
                <label>AA</label>
            </value>
            <value>
                <fullName>ASAS</fullName>
                <isActive>false</isActive>
                <label>ASAS</label>
            </value>
            <value>
                <fullName>DFD</fullName>
                <isActive>false</isActive>
                <label>DFD</label>
            </value>
            <value>
                <fullName>DSD</fullName>
                <isActive>false</isActive>
                <label>DSD</label>
            </value>
            <value>
                <fullName>Faulty CFP2 causing OTL Loss of Lane Alignment</fullName>
                <isActive>false</isActive>
                <label>Faulty CFP2 causing OTL Loss of Lane Alignment</label>
            </value>
            <value>
                <fullName>Functional</fullName>
                <isActive>false</isActive>
                <label>Functional</label>
            </value>
            <value>
                <fullName>Loss Of Signal</fullName>
                <isActive>false</isActive>
                <label>Loss Of Signal</label>
            </value>
            <value>
                <fullName>Loss of frame alarm flapping</fullName>
                <isActive>false</isActive>
                <label>Loss of frame alarm flapping</label>
            </value>
            <value>
                <fullName>OO</fullName>
                <isActive>false</isActive>
                <label>OO</label>
            </value>
            <value>
                <fullName>Pluggable alarm occurred</fullName>
                <isActive>false</isActive>
                <label>Pluggable alarm occurred</label>
            </value>
            <value>
                <fullName>Ports would not validate</fullName>
                <isActive>false</isActive>
                <label>Ports would not validate</label>
            </value>
            <value>
                <fullName>Problem Description: Pluggable Tx power is OOR-LO. Tried re-seating and also tried installing pluggable on different port.</fullName>
                <isActive>false</isActive>
                <label>Problem Description: Pluggable Tx power is OOR-LO. Tried re-seating and also tried installing pluggable on different port.</label>
            </value>
            <value>
                <fullName>SDS</fullName>
                <isActive>false</isActive>
                <label>SDS</label>
            </value>
            <value>
                <fullName>TEST UAT</fullName>
                <isActive>false</isActive>
                <label>TEST UAT</label>
            </value>
            <value>
                <fullName>TXing errors</fullName>
                <isActive>false</isActive>
                <label>TXing errors</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>alarms raised</fullName>
                <isActive>false</isActive>
                <label>alarms raised</label>
            </value>
            <value>
                <fullName>as</fullName>
                <isActive>false</isActive>
                <label>as</label>
            </value>
            <value>
                <fullName>asa</fullName>
                <isActive>false</isActive>
                <label>asa</label>
            </value>
            <value>
                <fullName>dsds</fullName>
                <isActive>false</isActive>
                <label>dsds</label>
            </value>
            <value>
                <fullName>sdsda</fullName>
                <isActive>false</isActive>
                <label>sdsda</label>
            </value>
            <value>
                <fullName>upgrade to firmware 35 per details and file attached in FAE case</fullName>
                <isActive>false</isActive>
                <label>upgrade to firmware 35 per details and file attached in FAE case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>