src/objects/RMA_Request_Line__c/fields/RMA_Request__c.field-meta.xml
<CustomField>
    <fullName>RMA_Request__c</fullName>
    <inlineHelpText>This is the RMA Request to which this line item looks up</inlineHelpText>
    <label>RMA Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>RMA Request Lines</relationshipLabel>
    <relationshipName>RMA_Request_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>