src/objects/RMA_Request_Line__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>This is a concatenation of the serial number and the case number for the purposes of ensuring that serial numbers are not duplicated on a single RMA Request</description>
    <externalId>true</externalId>
    <label>SerialNumber</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>