src/objects/RMA_Request_Line__c/fields/Shipped_date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_date__c</fullName>
    <label>Shipped date</label>
    <type>Date</type>
</CustomField>