src/objects/RMA_Request_Line__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>