src/objects/RMA_Request_Line__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <inlineHelpText>Enter Warranty In Months</inlineHelpText>
    <label>Warranty (In Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>