src/objects/RMA_Request_Line__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <formula>IF(AND(ISBLANK( Warranty__c ), LEN(Warranty_Information__c) = 2), ADDMONTHS(Shipped_date__c , VALUE(Warranty_Information__c)) ,IF(Warranty__c &lt;=0, null, ADDMONTHS(Shipped_date__c , Warranty__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>