src/objects/RMA_Request_Line__c/fields/Warranty_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Indicator__c</fullName>
    <formula>IF(IF( ISBLANK( RMA_Request__r.Customer_Name__r.Customer_Warranty__c ) , RMA_Request__r.Customer_Name__r.Top_Customer_Warranty__c , RMA_Request__r.Customer_Name__r.Customer_Warranty__c ) == &apos;&apos;, &apos;N/A&apos;, IF(AND(NOT(ISBLANK( Warranty_End_Date__c )), Warranty_End_Date__c &lt;=  TODAY() ),  IMAGE(&apos;/resource/1535629670000/red&apos;,&apos;red&apos;,25,50) , IMAGE(&apos;/resource/1535629399000/green&apos;,&apos;green&apos;,25,50)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Indicator</label>
    <type>Text</type>
</CustomField>