src/objects/RMA_Request_Line__c/fields/Warranty_Information__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Information__c</fullName>
    <formula>IF( ISBLANK( RMA_Request__r.Customer_Name__r.Customer_Warranty__c ) ,  RMA_Request__r.Customer_Name__r.Top_Customer_Warranty__c , RMA_Request__r.Customer_Name__r.Customer_Warranty__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Information</label>
    <type>Text</type>
</CustomField>