src/objects/RMA_Request_Line__c/validationRules/New_Line_Items_Pending_Admin_Review_Erro.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Line_Items_Pending_Admin_Review_Erro</fullName>
    <active>true</active>
    <description>Error message to be thrown while creating new line items when status is pending admin review error</description>
    <errorConditionFormula>AND(
ISPICKVAL(RMA_Request__r.Status, &apos;Pending RMA Admin Review&apos;) ,
ISNEW() 
)</errorConditionFormula>
    <errorMessage>New Line Items can not be added when Status is in Pending RMA Admin Review</errorMessage>
</ValidationRule>