src/objects/RMA_Request_Line__c/validationRules/Return_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(Return_Reason__c) ) , ISNEW() )</errorConditionFormula>
    <errorMessage>Return Reason Required on New RMA Lines</errorMessage>
</ValidationRule>